--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "initSQL": "",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
